

*** Isabelle/VSCode Prover IDE ***

* HTML preview of theories and other file-formats similar to
Isabelle/jEdit.


*** Document preparation ***

* Embedded languages such as inner syntax and ML may contain formal
comments of the form "\<comment> \<open>text\<close>". As in marginal comments of outer
syntax, antiquotations are interpreted wrt. the presentation context of
the enclosing command.

* System option "document_tags" specifies a default for otherwise
untagged commands. This is occasionally useful to control the global
visibility of commands via session options (e.g. in ROOT).

* Document markup commands ('section', 'text' etc.) are implicitly
tagged as "document" and visible by default. This avoids the application
of option "document_tags" to these commands.

* Isabelle names are mangled into LaTeX macro names to allow the full
identifier syntax with underscore, prime, digits. This is relevant for
antiquotations in control symbol notation, e.g. \<^const_name> becomes
\isactrlconstUNDERSCOREname.

* Document antiquotation @{cite} now checks the given Bibtex entries
against the Bibtex database files -- only in batch-mode session builds.

* Document antiquotation @{session name} checks and prints the given
session name verbatim.

* Document preparation with skip_proofs option now preserves the content
more accurately: only terminal proof steps ('by' etc.) are skipped.

* Command-line tool "isabelle document" has been re-implemented in
Isabelle/Scala, with simplified arguments and explicit errors from the
latex and bibtex process. Minor INCOMPATIBILITY.


*** HOL ***

* A new command parametric_constant for proving parametricity of
non-recursive definitions. For constants that are not fully parametric
the command will infer conditions on relations (e.g., bi_unique,
bi_total, or type class conditions such as "respects 0") sufficient for
parametricity. See ~~/src/HOL/ex/Conditional_Parametricity_Examples for
some examples.

* SMT module: